
2.2.18
Changes:
        - Accept dailymotion swf URLs (related b#3115846)


2.2.17  Sat Nov 06 2010  legatvs
Changes:
        - toUnits: fix hi-speed issue, thanks to Thomas Klausner for the report
        - Makefile.PL: Use VERSION_FROM
        - Use 'version' module


Version 2.2.16
September 28, 2010

Changes:
  * Add support for webm_480p, webm_720p [youtube]
    * Thanks to Mark Weaver for the patch, <http://is.gd/fmwv5>
  * Misc. minor tweaks in manual (e.g. URLs, etc.)
  * Migrate issue tracking from Googlecode to Sourceforge, <http://is.gd/fmylF>


Version 2.2.15
September 10, 2010

Changes:
  * New Youtube test URL
  * --format, "flv" is now called "default"
  * Add Youtube 1080p support (#62)
  * Update Youtube format IDs to match those used with quvi

Bugfixes:
  * Vimeo support (http/404), thanks to Jonas Smedegaard for the fix (#61)
    - <http://bugs.debian.org/595486>


Version 2.2.14
September 2, 2010

Bugfixes:
  * Output File path encoding (#60)


Version 2.2.13
August 12, 2010

Changes:
  * Add --license option


Version 2.2.12
July 25, 2010

Changes:
  * Mark cctv support as broken

Bugfixes:
  * [youtube] http/404, ported from quvi, fix by Daniel Schaal (quvi #7)
  * break.com support, thanks to Werner Elsler for the fix (#57)


Version 2.2.11
--------------
April 3, 2010

Bugfixes:
  * Youtube, update patterns to reflect website changes


Version 2.2.10
--------------
March 24, 2010

Changes:
  * Add buzzhumor.com support
  * Mark ehrensenf.de support as broken

Bugfixes:
  * Update --hosts format strings
  * dailymotion.com
    # Change format IDs to reflect website changes (yet again):
      * h264-hd -> hd
      * h264-hq -> hq
      * removed h264 and spark-mini (no longer even listed)
    # Parse title from elsewhere
      * Title was previously parsed from the title HTML tag
      * Which usually contained more than we cared for
    # Spew out an error if the video looks like a partner video
  * break.com