@@ -8,15 +8,15 @@ if ( $ENV{NO_INTERNET} ) {
     plan skip_all => "No internet during package build";
 }
 else {
-    plan tests => 3;
+    plan tests => 2;
 }
 use Test::clive;
 
 Test::clive::host(
-    qq|http://video.google.com/videoplay?docid=-8669127848070159803|,
+    qq|http://video.google.com/videoplay?docid=-6970952080219955808|,
     "-f $_" )
-    foreach qw(default mp4);
+    foreach qw(default);
 
 Test::clive::host(             # Embed.
-    qq|http://video.google.com/googleplayer.swf?docid=-8669127848070159803|
+    qq|http://video.google.com/videoplay?docid=-6970952080219955808|
 );
