@@ -1,6 +1,7 @@
 
 2.2.18
 Changes:
+        - Change google test URL
         - Accept dailymotion swf URLs (related b#3115846)
 
 
